gcc/testsuite/rust/rustc/ui/label/label-underscore.rs
fn main() {
    '_: loop { // { dg-error "" "" { target *-*-* } }
        break '_ // { dg-error "" "" { target *-*-* } }
    }
}

